FIX(Navbar): added logo, fixed various spacing issues

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,20 +1,21 @@
 .about-and-social {
   display: flex;
   justify-content: space-between;
-  background-color: white
+  background-color: white;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
 }
 
 .about-me {
   flex: 2;
   text-align: start;
-  padding-left: 100px
-  /* padding: 0px 150px 0px 150px */
+  /* padding-left: 100px;
+  padding-right: 50px */
+  padding: 0px 50px 21px 100px
 }
 
 .social-media {
   flex: 1;
-  /* padding: 0px 50px 0px 50px; */
-  /* justify-content: space-around */
 }
 
 .social-media-links {
