--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -10,6 +10,7 @@
   padding: 20px;
   border: 1px solid black;
   border-radius: 5px;
+  box-shadow: 2px 2px gray;
 }
 
 .pic-vc {
